fix overflow bug

--- a/src/gallery.scss
+++ b/src/gallery.scss
@@ -1,3 +1,5 @@
+.overflow-hidden { overflow: hidden; }
+
 .simple-gallery {
   position: fixed;
   top: 0;
